Bug 312995 - "Removing grades" option can lead to misunderstanding
Summary: "Removing grades" option can lead to misunderstanding
Status: RESOLVED FIXED
Alias: None
Product: parley
Classification: Applications
Component: general (other bugs)
Version First Reported In: 0.9.4
Platform: Ubuntu All
: NOR normal
Target Milestone: ---
Assignee: parley bug tracker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-10 07:14 UTC by Juergen
Modified: 2014-02-25 18:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen 2013-01-10 07:14:54 UTC
The option of removing the grades is not clear and the functionality could be improved. I suggest either to rename in the Edit menu "Remove grades" to "Remove grades from all entries" or "Remove grades from all lessons" or to improve the remove grades function so that one can remove grades from chosen lesson (highlighted words). 

Reproducible: Always

Steps to Reproduce:
1. Go into one lesson and highlight (mark) some words
2. Go to the Edit menu and click on "Remove grades"

Actual Results:  
The grades are removed from all words in the whole collection.

Expected Results:  
The grades are only removed from the highlighted words.
Comment 1 Andreas Cord-Landwehr 2014-02-25 18:18:03 UTC
Git commit ee9e89e3117fe7a81d022a256bd41fdd165f049b by Andreas Cord-Landwehr.
Committed on 19/02/2014 at 20:44.
Pushed by cordlandwehr into branch 'master'.

Add options to delete grades from lesson subtrees.

Add context menu options to remove all grades from a selected lesson
or alternatively from it and all sub-lessons of the selected lesson.
Also clarify the Remove Grades option in the main menu.

Patch provided by Enrique Garcia, thanks a lot!
CCMAIL: cquike@ovi.com

M  +3    -0    src/editor/editorui.rc
M  +19   -2    src/statistics/lessonstatistics.cpp
M  +1    -0    src/statistics/lessonstatistics.h
M  +38   -0    src/vocabulary/lessonview.cpp
M  +6    -0    src/vocabulary/lessonview.h

http://commits.kde.org/parley/ee9e89e3117fe7a81d022a256bd41fdd165f049b