Add options to delete grades from lesson subtrees.

Add context menu options to remove all grades from a selected lesson
or alternatively from it and all sub-lessons of the selected lesson.
Also clarify the Remove Grades option in the main menu.

Patch provided by Enrique Garcia, thanks a lot!

BUG: 312995
CCMAIL: cquike@ovi.com